@@ -58,12 +58,14 @@ About::About(QWidget * parent, Qt::WindowFlags f)
 
 
 	QString license_file = Helper::doc("GPL.html", pref->language);
-	if (!QFile::exists(license_file)) license_file = Helper::doc("GPL.txt", pref->language);
+	//if (!QFile::exists(license_file)) license_file = Helper::doc("GPL.txt", pref->language);
 
 	if (QFile::exists(license_file)) {
+		/*
 		if (license_file.endsWith("txt")) {
 			license->setLineWrapMode(QTextEdit::NoWrap);
 		}
+		*/
 		QFont fixed_font;
 		fixed_font.setStyleHint(QFont::TypeWriter);
 		fixed_font.setFamily("Courier");
